repair screen on mobile device

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -659,8 +659,8 @@ html,
   height: 18rem;
 }
 
-.h-\[90vh\] {
-  height: 90vh;
+.h-\[80vh\] {
+  height: 80vh;
 }
 
 .h-full {
@@ -1098,6 +1098,10 @@ html,
 
   .md\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:h-\[480px\] {
